FIX responsive issues on profile page and contrast wave errors

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,6 +55,8 @@ a {
     color:#28a745!important;
 }
 
+
+
 #logo-main a:hover,
 #allvehlink:hover,
 #checkout-btn:hover,
@@ -102,7 +104,7 @@ a {
 
 
 .navbar-toggler {
-    background-color: white!important;
+    background-color: #28a745;
     border:1px solid black!important;
     color: black !important;
 }
@@ -119,14 +121,17 @@ li.nav-item.dropdown {
 .dropdown-item {
     color: black !important;
 }
+
 #image {
+    background-color: aliceblue;
     vertical-align: top;
     height:35vh;
     width:100vw;
     background-size: cover;
-    background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/q_auto:eco/v1659362355/media/pp5/ferrari-320-pp5_mjovzg.webp");
-    /*
-*/
+    /* background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/w_320,h_309/v1664276306/media/pp5/ferrari-small320front-pp5_a9fqoy.jpg");
+      */
+    /* background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/w_320,h_288/v1664278412/media/pp5/Lamborghini-side-view_mjephz.jpg"); */
+    background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/c_scale,w_300,h_288/v1664279796/media/pp5/greenlambo-small-pp5_foazm6.jpg");
 }
 
 
@@ -151,15 +156,19 @@ li.nav-item.dropdown {
     min-height: 270px;
 }
 
+#carowrap {
+    background:aliceblue;
+}
+
 .img-height {
     min-height:200px;
-    border:2px solid #28a745!important;
+    border:2px solid black!important;
     object-fit: contain;
 }
 
 .cardetail {
     min-height:60px;
-    border:2px solid #28a745;
+    border:2px solid black;
     border-top: none;
 }
 
@@ -210,6 +219,10 @@ li.nav-item.dropdown {
         object-fit: fill;
     }
 
+    #image {
+        background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/c_scale,w_375,h_288/v1664279796/media/pp5/greenlambo-small-pp5_foazm6.jpg");
+    }
+
     #body-bag {
         font-size:initial;
     }
@@ -225,16 +238,28 @@ li.nav-item.dropdown {
         min-height:350px;
         object-fit: contain;
     }
+
+    #image {
+       background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/v1664279796/media/pp5/greenlambo-small-pp5_foazm6.jpg");
+        /* background-image:url("https://res.cloudinary.com/dpudxnll7/image/upload/c_scale,fl_ignore_aspect_ratio,h_300/v1664278412/media/pp5/Lamborghini-side-view_mjephz.jpg"); */
+        /* background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/q_auto:eco/v1659362355/media/pp5/ferrari-320-pp5_mjovzg.webp"); */
+    }
+
 }
 
 @media screen and (min-width:768px) {
     #image {
-        background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/v1664102996/media/pp5/ferrari-wide-landscwebp_lc2y5f.webp");
+        /* background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/v1664102996/media/pp5/ferrari-wide-landscwebp_lc2y5f.webp"); */
+        /* background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/v1664278142/media/pp5/lotusside_gz8rb5.jpg"); */
+        background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/c_scale,w_690,h_288/v1664278412/media/pp5/Lamborghini-side-view_mjephz.jpg");
+        object-position: 50% -10%;
+        
         width:90%;
         margin-left: 5%;
         margin-right: 5%;
         margin-top: 5px;
         border:2px #28a745 solid;
+        
     }
 
     .radiob {
@@ -288,6 +313,10 @@ li.nav-item.dropdown {
     .imagewrap{
         min-height: 624px;
         max-height: 624px;
+    }
+
+    #image{
+        background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/c_scale,w_921,h_288/v1664278412/media/pp5/Lamborghini-side-view_mjephz.jpg");
     }
     
     .img-height {
@@ -345,7 +374,24 @@ li.nav-item.dropdown {
         min-height:400px;
         max-height:400px;
     }
+
+    #image {
+        width:80vw;
+        margin-left:10vw;
+        margin-right:10vw;
+        background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/c_scale,w_1152,h_320/v1664278412/media/pp5/Lamborghini-side-view_mjephz.jpg");
+    }
     
+
+}
+
+@media screen and (min-width:1850px){
+    #image {
+        width:75vw;
+        margin-left:12.5vw;
+        margin-right:12.5vw;
+        background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/c_scale,w_1600,h_350/v1664295590/media/pp5/lamboblues2000-pp5_wpkxlt.png");
+    }
 
 }
 
@@ -361,5 +407,11 @@ li.nav-item.dropdown {
     .img-height {
         min-height: 1500px;
         max-height:1501px;
+    }
+
+    #image {
+        object-fit:fill;
+        height:50vh;
+        background-image: url("https://res.cloudinary.com/dpudxnll7/image/upload/c_scale,w_1536,h_300/v1664295590/media/pp5/lamboblues2000-pp5_wpkxlt.png");
     }
 }
